2011-05-20  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* ItkToolbox/SignedMaurerFilter.hpp, DanielssonFilter.hpp,
	NrrdImage.hpp, BaseFilter.cpp, ArgumentParsers.cpp,
	BaseFilter.hpp, ArgumentParsers.hpp, ThinningFilter.hpp,
	SignedMaurerFilter.cpp:

	- (v0.2.0) Big change in architecture. BaseFilter declares the
	filter variable as an ImageToImageFilter, but then it's the
	responsability of each derived filter class to instantiate it in
	its constructor.

	- BaseFilter declares several methods that contain the code to
	load the image, filter it and pass the output to Matlab for a
	plain filter. These methods are virtual, so thanks to polymorphism
	we can override them in the derived filter classes if the filter
	has any special requirements or features.

	- Big thanks to Joe Pitt-Francis, Miguel Bernabeu and Raf Bordas
	for their help and advice that made this architecture change
	possible.

2011-05-19  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* ItkToolbox/ItkKernelTransform.cpp:

	- Add svn:keywords Rev, Date.

	* ItkToolbox/SignedMaurerFilter.hpp,
	ItkToolbox/SignedMaurerFilter.cpp,
	ItkToolbox/DanielssonFilter.hpp, ItkToolbox/DanielssonFilter.cpp,
	ItkToolbox/NrrdImage.hpp, ItkToolbox/NrrdImage.cpp,
	ItkToolbox/BaseFilter.hpp, ItkToolbox/BaseFilter.cpp,
	ItkToolbox/ThinningFilter.hpp, ItkToolbox/ThinningFilter.cpp:

	- Move parser functions to new files.

	- Create member functions for BaseFilter to split the filtering in
	different stages. These functions are virtual, so they can be
	redifined by derived classes to introduce functionality specific
	to each fiter.

	- Remove function SetSpecificParameters(), because now its
	functionality will be part of FilterSetup().

	* Add ItkToolbox/ArgumentParsers.hpp,
	ItkToolbox/ArgumentParsers.cpp, CMakeLists.txt:

	- Files to contain the functions that parse the input type
	variables to type templates.

	* ItkToolbox/SignedMaurerFilter.cpp, ItkToolbox/BaseFilter.hpp,